--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+@import 'datatables.net-responsive-dt/css/responsive.dataTables.min';
+
 /* :: 1.0 Import Fonts */
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap');
@@ -12,18 +14,13 @@
 @import "helpers/color";
 @import "helpers/fonts";
 @import "helpers/responsive";
-// @import "helpers/spacing";
-// @import "helpers/border";
 
 // *******************
 //     component
 // *******************
 @import "component/button";
 @import "component/datatable";
-// @import "component/form";
 @import "component/sidebar";
-// @import "component/card";
-// @import "component/img";
 
 // *******************
 //     base
@@ -33,11 +30,5 @@
 // *******************
 //     pages
 // *******************
-// @import "pages/calendar";
-// @import "pages/colorControl";
-// @import "pages/login";
-// @import "pages/organization";
-// @import "pages/profile";
-// @import "pages/todoList";
-// @import "pages/jsPlumb";
+@import "pages/addTable";
 
