--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,4 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
+@import '@fortawesome/fontawesome-free/css/all.min.css';
+@import 'datatables.net-dt/css/jquery.dataTables.css';
 @import 'datatables.net-responsive-dt/css/responsive.dataTables.min';
 
 /* :: 1.0 Import Fonts */
