--- a/src/scss/pages/_addTable.scss
+++ b/src/scss/pages/_addTable.scss
@@ -2,3 +2,30 @@
     color: red;
     font-size: 11px;
 }
+
+.price{
+    text-align: center;
+    border: 1px solid rgb(148, 148, 148);
+}
+.custom-btn{
+    border: 1px solid rgb(148, 148, 148);
+    &:hover{
+        background-color:  rgb(184, 184, 184);
+        color: #FFF;
+    }
+    &:disabled{
+        background-color:  rgb(107, 107, 107);
+    }
+}
+/* Chrome, Safari, Edge, Opera */
+input.price::-webkit-outer-spin-button,
+input.price::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
+/* Firefox */
+input.price {
+  -moz-appearance: textfield;
+}
